<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_set_date"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/menu_choose_period"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_filter"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/menu_filter_categories"
        android:visible="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_search_adress"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/menu_search_address"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_show"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/menu_show_events"
        android:visible="true"
        app:showAsAction="always" />

</menu>