<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:text="@string/title_dialog_address"
        android:textAppearance="@style/TextAppearance.AppTheme.DialogCaption"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/inputCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_dialog_city"
        android:inputType="textPostalAddress"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:maxLines="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:text="@string/title_dialog_results" />

    <ListView
        android:id="@+id/dlg_address_list_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>